--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stock-market",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
@@ -19,8 +20,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.3",
     "flag-icons": "^7.5.0",
     "lucide-react": "^0.559.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
